# 2022-tests-examples-2

./: README.md
Taxi/.load-testing/: .arcignore  config (2).js  config.js  lunapark (2).yaml  lunapark.yaml
Taxi/010_API_TEST/: woodi_api.js
Taxi/2019-12-27_15.02.12_@rubin_test/: down.sql  up.sql
Taxi/76_test_segv/: ast  code  (+1 more)
Taxi/test_definitions/: CMakeLists.txt
Taxi/test_definitions/include/stq_clients/: test_definitions.hpp
Taxi/test_definitions/src/stq_clients/: test_definitions.cpp
noc/integration_tests/: MANIFEST.in  setup.cfg
noc/integration_tests/requirements/: development.txt  production.txt
noc/integration_tests/src/l3mgr_intergation_tests/: config.toml  definitions.py
noc/integration_tests/src/l3mgr_intergation_tests/core/: client.py  config.py  exceptions.py
noc/integration_tests/src/l3mgr_intergation_tests/helpers/: testenv_helpers.py
noc/integration_tests/src/l3mgr_intergation_tests/test_agent/: test_config_testing_task.py
noc/integration_tests/src/l3mgr_intergation_tests/test_l3mgr/: test_conditional_config_modification.py  test_get_ip.py
noc/tests/unit/: .gitignore  Makefile.am  helpers.py  pytest.ini  run-tests.sh  switch_core.c  switch_estimators.c  switch_ivr_originate.c  switch_jitter_buffer.c  switch_red.c  switch_rtp.c  switch_ulp.c  switch_ulp_jb.c  switch_ulp_recover1.c  switch_ulp_recover2.c  switch_ulp_recover3.c  switch_ulp_recover4.c  switch_vad.c  test_cli.py  test_history_cleaning_worker.py  test_ns_worker.py  test_querier.py  test_server.py  test_utils.py
noc/tests/unit/conf/: freeswitch.xml
noc/tests/unit/conf_estimators/: freeswitch.xml
noc/tests/unit/pcap/: rtp-opus-beep.pcap  video-vp8-100pkts.pcap
noc/tests/unit/test_keepalived/: test_keepalived.py
noc/tests/unit/test_tvm/: test_tvm.py
security/: agent_checker_test.go  archer_test.go  ask_test.go  askpass_test.go  bandwidthlimit_test.go  batcher_test.go  bazelmaven_test.go  blacklist_test.go  bytes_test.go  cache_test.go  certificate_test.go  cgroup_test.go  cgroup_test.h  checker_test.go  client_test.go  common_test.go  config_test (2).go  config_test.go  configs_test.go  constraints_test.go  container_porto_access_test.go  container_state_test.go  container_test.go  container_virt_mode_test.go  controller_test.go  cumulus_test.go  cvs_test (2).go  cvs_test.go  daemon_test.go  debian_test.go  detect_test.go  docker-compose.test.yml  download_test.go  duration_test.go  e2e_test (2).go  e2e_test (3).go  e2e_test.go  executable_test.go  exponential_test.go  file_test.go  (+133 more)
(+103797 files in other folders)
