[metadata]
name = yandex-l3mgr-integration-tests
version = 0.0.10
author = Vasily Piskunov
author_email = piskunov-va@yandex-team.ru
description = Tests for L3 Manager components
long_description = file: README.md
long_description_content_type = text/markdown
url = https://a.yandex-team.ru/arc/trunk/arcadia/noc/traffic/l3mgr-intergation-tests
project_urls =
    L3 Manager = https://l3.tt.yandex-team.ru
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    requests
    envtoml
    pytest
    pytest-cov
    pytest-env
    pytest-xdist
    python-box
    python-dotenv

[options.packages.find]
where = src

[upload]
repository = yandex
